--- a/main.tex
+++ b/main.tex
@@ -127,9 +127,8 @@
 \maketitle
 
 \begin{abstract}
-  \todo{190 words: too long? Should I aim for 150-170?}  
   %
-  Many VCS systems, including Git and Mercurial, relies on
+  Many version control systems, including Git and Mercurial, rely on
   \texttt{diff3} to merge different revisions of the same file.
   %
   More precisely \texttt{diff3} automatically merges two text files,
@@ -137,7 +136,7 @@
   conflicts when the changes made are irreconcilable.
   %
   The program ignores the actual structure of the data stored in the
-  files, hence it might generate spurious conflicts that must be
+  files, hence it might generate spurious conflicts, which must be
   manually resolved by the user.
   %
   In this paper, we present a state-based, three-way, persistent,
@@ -149,19 +148,17 @@
   dependent types, and developed a model to reason about ``diffing''
   and merging.
   %
-  \todo{Too many details? More motivation?}
-  We have established that the algorithm fulfills its specification
-  and proved that it is correct with respect to some safety
-  properties.
+  We have formalized sanity properties and specifications of
+  \texttt{diff3} and proved that our algorithm meets them.
   %
   Furthermore, we have identified the minimal conditions under which
   the merging algorithm raises a conflict and established a structural
-  invariant preserved.
+  invariant preserved.\todo{Improve conclusion?}
   %
   % We have implemented our algorithm in Haskell in order to make our results
   % practical and employed advanced type-system features to retain a 
   % fair amount of type safety.
-  \todo{Abstract Conclusion?}
+  %\todo{Abstract Conclusion?}
 \end{abstract}
 
 \category{CR-number}{subcategory}{third-level}
